fix: align items in the left header of the sidebar

--- a/src/assets/styles/cmps/station/LeftSideBar.css
+++ b/src/assets/styles/cmps/station/LeftSideBar.css
@@ -29,6 +29,7 @@
     position: sticky;
     z-index: 2;
     padding-inline-end: var(--encore-spacing-tighter-2);
+    align-items: center;
     
    h3 {
       font-size: 20px;
